WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275175
[WGSL] Cannot access fields of PackedVec3
https://bugs.webkit.org/show_bug.cgi?id=275175
Summary
[WGSL] Cannot access fields of PackedVec3
Tadeu Zagallo
Reported
2024-06-05 11:55:43 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2024-06-05 11:55:48 PDT
<
rdar://problem/129052933
>
Tadeu Zagallo
Comment 2
2024-06-05 11:58:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29555
EWS
Comment 3
2024-06-07 04:53:33 PDT
Committed
279808@main
(8c16f89f981d): <
https://commits.webkit.org/279808@main
> Reviewed commits have been landed. Closing PR #29555 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug