[WGSL] Cannot access fields of PackedVec3 https://bugs.webkit.org/show_bug.cgi?id=275175 rdar://129052933

Reviewed by Mike Wyrzykowski.

The current implementation of PackedVec3 wraps a packed_vec<T, 3>, but it doesn't
provide any means to access the components of the vector. Change it so it matches
the vec/packed_vec interface by having x/y/z members and implementing a subscript
operator.

* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::getPacking):
* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::emitNecessaryHelpers):
* Source/WebGPU/WGSL/WGSL.cpp:
(WGSL::prepareImpl):

Canonical link: https://commits.webkit.org/279808@main